bin/css/style.css
/* ... */
/*********************************************************************************/
/* search site types - standard Suche
/*********************************************************************************/

.qui-search-result form {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-left: -10px;
    margin-right: -10px;
}

.qui-search-result .form-field-search {
    flex-grow: 3;
    margin: 10px;
    min-width: auto;
}

.qui-search-result input[type="submit"] {
    flex-grow: 1;
    margin: 10px;
    order: 3;
}


/*********************************************************************************/
/* search brick
/*********************************************************************************/

.quiqqer-suggestSearch-wrapper {
    width: 85%;
}

/*********************************************************************************/
/* ChildrenList
/* site type: quiqqer/tags:types/tag-search
/*********************************************************************************/

a.qui-control-list-entry-imagelink {
    border: none;
}

.quiqqer-tags-list-result-entry a {
    color: inherit;
}

/*********************************************************************************/
/* site type: types/tag-listing
/*********************************************************************************/

.quiqqer-sheets-desktop-limits a:hover {
    background: none;
    box-shadow: none;
    color: var(--qui-colors-primary);
}

.quiqqer-tags-search-pool .qui-button.qui-button--no-icon {
    font-size: 16px;
    margin: 0 5px 5px 0;
    padding: 3px 10px;
}

/*********************************************************************************/
/* site type: quiqqer/tags:types/tag-listing
/*********************************************************************************/

.content-short.qui-tags-tag-content {
    padding-top: 0;
}

/* todo @michael.daniel improve css selector */
.tpl-presentation-row a.qui-tags-tag:hover {
    border: 1px solid var(--qui-colors-primary);
    color: var(--qui-colors-primary);
}

/*********************************************************************************/
/* content message
/*********************************************************************************/

.content-message-information,
.content-message-attention,
.content-message-error,
.content-message-success {
    margin: 1em 0;
}

/*********************************************************************************/
/* breadcrumb
/*********************************************************************************/

.template-breadcrumb {
    padding-top: var(--qui-tpl-breadcrumb-spacing);
    padding-bottom: var(--qui-tpl-breadcrumb-spacing);
    border-bottom: var(--qui-border-width) var(--qui-border-style) var(--qui-tpl-breadcrumb-border-color);
}

/*********************************************************************************/
/* infinite brick
/*********************************************************************************/

.quiqqer-bricks-children-infinite .button {
    float: none;
}

.quiqqer-bricks-children-infinite a,
.quiqqer-bricks-children-infinite a:hover,
.quiqqer-bricks-children-infinite a:active {
    color: #333;
    font-weight: normal;
}

.quiqqer-bricks-children-infinite-child-display {
    overflow: hidden;
}

.quiqqer-bricks-children-infinite-child-display header {
    left: 0;
}

.quiqqer-bricks-children-infinite-child-display > a img {
    bottom: 0;
    left: 0;
    margin: auto;
    min-height: 100%;
    min-width: 100%;
    position: absolute;
    right: 0;
    top: 0;
}

.quiqqer-bricks-children-infinite-child-display > a img:hover {
    -moz-transform: none;
    -ms-transform: none;
    -o-transform: none;
    -webkit-transform: none;
    transform: none;
}

/*********************************************************************************/
/* children list 3er
/*********************************************************************************/
.qui-control-childrenlist-3er-entry-image span.quiqqer-icon {
    font-size: 130px;
}

